; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_udbg.c_mv64x60_udbg_getc_poll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_udbg.c_mv64x60_udbg_getc_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mv64x60_udbg_getc_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv64x60_udbg_getc_poll() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @mv64x60_udbg_testc()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @mv64x60_udbg_getc()
  store i32 %6, i32* %1, align 4
  br label %7

7:                                                ; preds = %5, %4
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i32 @mv64x60_udbg_testc(...) #1

declare dso_local i32 @mv64x60_udbg_getc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
